DataGrid - Fix the expand button vertical alignment (T677928) (#5875)

--- a/styles/widgets/ios7/gridBase.ios7.less
+++ b/styles/widgets/ios7/gridBase.ios7.less
@@ -200,6 +200,9 @@
                 width: @GRID_BASE_COMMAND_EDIT_COLUMN_WIDTH;
                 min-width: @GRID_BASE_COMMAND_EDIT_COLUMN_WIDTH;
             }
+            .dx-command-expand.dx-@{widgetName}-group-space {
+                vertical-align: middle;
+            }
         }
     }
 
